fix scroll unloading; reader toolbar visible when AUP notice is visible

--- a/pt/web/2021/src/scss/app.scss
+++ b/pt/web/2021/src/scss/app.scss
@@ -1081,6 +1081,10 @@ html[data-in-walkthrough="true"] {
   }
 }
 
+#aup-alert-form + #root .d--toolbar--reader {
+  bottom: 6rem;
+}
+
 @import "debug";
 @import "tippy";
 @import "panels";
